<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_home"
        android:enabled="true"
        android:icon="@drawable/icon_home"
        android:title="@string/title_home"/>
    <item
        android:id="@+id/page_classify"
        android:enabled="true"
        android:icon="@drawable/icon_classify"
        android:title="@string/title_classify"/>

    <item
        android:id="@+id/page_community"
        android:enabled="true"
        android:icon="@drawable/icon_community"
        android:title="@string/title_community"/>

    <item
        android:id="@+id/page_shopping_cart"
        android:enabled="true"
        android:icon="@drawable/icon_shopping_cart"
        android:title="@string/title_shopping_cart"/>

    <item
        android:id="@+id/page_profile"
        android:enabled="true"
        android:icon="@drawable/icon_profile"
        android:title="@string/title_profile"/>
</menu>