<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".biz.aboutfragment.FragmentSwitchActivity">

        <FrameLayout
            android:id="@+id/layout_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_add_b"
            android:layout_weight="1" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_fragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:flow_horizontalGap="10dp"
            app:flow_verticalGap="10dp"
            app:flow_wrapMode="chain"
            app:constraint_referenced_ids="btn_add_b,btn_replace_b,btn_remove_b,btn_show_frag_exist" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_blue_r6"
            style="@style/MainButtonStyle"
            android:text="@string/add_fragment"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_replace_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_blue_r6"
            style="@style/MainButtonStyle"
            android:text="@string/replace_fragment"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_remove_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_blue_r6"
            style="@style/MainButtonStyle"
            android:text="@string/remove_fragment"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_show_frag_exist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_blue_r6"
            style="@style/MainButtonStyle"
            android:text="@string/frag_exist"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>